2008-08-28  Werner Koch  <wk@g10code.com>

	* cipher.c (cipher_decrypt, cipher_encrypt): Return an error if
	mode NONE is used.
	(gcry_cipher_open): Allow mode NONE only with a debug flag set and
	if not in FIPS mode.

2008-08-26  Werner Koch  <wk@g10code.com>

	* pubkey.c (pubkey_generate): Add arg KEYGEN_FLAGS.
	(gcry_pk_genkey): Implement new parameter "transient-key" and
	pass it as flags to pubkey_generate.
	(pubkey_generate): Make use of an ext_generate function.
	* rsa.c (generate): Add new arg transient_key and pass appropriate
	args to the prime generator.
	(_gcry_rsa_generate): Factor all code out to ...
	(rsa_generate): .. new func with extra arg KEYGEN_FLAGS.
	(_gcry_pubkey_extraspec_ecdsa): Setup rsa_generate.
	* primegen.c (_gcry_generate_secret_prime) 
	(_gcry_generate_public_prime): Add new arg RANDOM_LEVEL.

2008-08-21  Werner Koch  <wk@g10code.com>

	* primegen.c (_gcry_generate_secret_prime)
	(_gcry_generate_public_prime): Use a constant macro for the random
	level.
	
2008-08-19  Werner Koch  <wk@g10code.com>

	* pubkey.c (sexp_elements_extract_ecc) [!USE_ECC]: Do not allow
	allow "curve" parameter.

2008-08-15  Werner Koch  <wk@g10code.com>

	* pubkey.c (_gcry_pk_selftest): New.
	* dsa.c (selftests_dsa, run_selftests): New.
	* rsa.c (selftests_rsa, run_selftests): New.
	* ecc.c (selftests_ecdsa, run_selftests): New.

	* md.c (_gcry_md_selftest): New.
	* sha1.c (run_selftests, selftests_sha1): New.
	* sha256.c (selftests_sha224, selftests_sha256, run_selftests): New.
	* sha512.c (selftests_sha384, selftests_sha512, run_selftests): New.

	* des.c (selftest): Remove static variable form selftest.
	(des_setkey): No on-the-fly self test in fips mode.
	(tripledes_set3keys): Ditto.

	* cipher.c (_gcry_cipher_setkey, _gcry_cipher_setiv): 

	* dsa.c (generate): Bail out in fips mode if NBITS is less than	1024.
	* rsa.c (generate): Return an error code if the the requested size
	is less than 1024 and we are in fpis mode.